--- a/src/Sidebar.css
+++ b/src/Sidebar.css
@@ -13,6 +13,7 @@
   border: none !important;
   border-radius: 50px !important;
   margin-top: 20px !important;
+  width: 100px !important;
 }
 
 .sidebar__twitterIcon {
